# ariadne

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: deploy.yml
ariadne/api/: main.py
ariadne/api/dependencies/: auth.py  limiter.py
ariadne/core/: config.py  graph.py  ingestion.py  logging_config.py  main.py  models.py  state.py
data/: incident_knowledge.json
data/pipeline/: chunks_medium.json  clean_docs.json  eval_report.json
docs/: 00_project_overview.md  01_day1_problem_definition.md  02_day3_real_rag.md  03_day4_multi_agent.md  architecture.md
docs/adr/: ADR-001-langgraph.md  ADR-002-flyio.md  ADR-003-gemini.md  ADR-004-qdrant.md
docs/day1_notes/: incident_classification.md  structured_output.md
evals/: ab_testing.py  benchmark_models.py  benchmark_runner.py  compare_results.py  langsmith_eval.py  pipeline.py  provider_runner.py  ragas_dataset.py  ragas_eval.py  reporting.py  retrieval_eval.py  rubric_scoring.py  run_ab_test.py  run_provider_test.py  sample_library.py
evals/evaluators/: __init__.py  ai_diagnosis.py  ragas_metrics.py  rubric_evals.py  token_cost.py
infra/: Dockerfile  fly.toml
scripts/: generate_eval_queries.py  index_data.py  ingest_pipeline.py
scripts/collect/: __init__.py  github_issues.py  postmortems.py
scripts/stages/: chunk.py  collect.py  collect_github.py  collect_postmortems.py  diagnose.py  evaluate.py  index.py  preprocess.py
tests/integration/: conftest.py  test_analyze.py  test_health.py
tests/unit/: test_ab_testing.py  test_analyzer.py  test_cached_embeddings.py  test_embeddings.py  test_filter_new_docs.py  test_graph.py  test_langsmith.py  test_models.py  test_output.py  test_pipeline.py  test_rag.py  test_rag_smoke.py
ui/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: AnalysisResult.tsx  ErrorMessage.tsx  LoadingState.tsx  LogInput.tsx  Logo.tsx
ui/lib/: api.ts  constants.ts
(+32 files in other folders)
