[project]
name = "ariadne"
version = "0.1.0"
description = "AI-powered incident log analyzer"
requires-python = ">=3.11"
dependencies = [
    # ── Production (API server) ───────────────────────────────────────
    "aiofiles>=23.0.0",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.9.1",
    "requests>=2.31.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "slowapi>=0.1.9",
    "tenacity>=8.2.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
evals = [
    # ── Offline evaluation (RAGAS + LangSmith experiments) ───────────
    "ragas>=0.4.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
]
ingestion = [
    # ── Offline ingestion pipeline (DVC stages, scraping, chunking) ──
    "beautifulsoup4>=4.12.0",
    "dvc>=3.50.0",
    "langchain-text-splitters>=0.3.0",
    "lxml>=5.0.0",
    "PyYAML>=6.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ariadne*", "evals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests against the FastAPI app",
]
